--- a/pub/css/index.css
+++ b/pub/css/index.css
@@ -4,7 +4,7 @@ i.plane{font-size:100px;margin:40px;color:rgba(0,64,128,0.3);position:fixed;left
 .hero-unit h2{font-size:100px}
 .timeline{-webkit-user-select:none;width:100%;height:300px;position:fixed;top:0;left:0;}
 .timeline .time-scroll-cont{position:absolute;top:100px;left:10px;right:10px;height:20px}
-.timeline .time-window{margin:20px;position:absolute;left:10px;right:10px;height:80%;overflow-x:auto;overflow-y:hidden;}
+.timeline .time-window{margin:20px;position:absolute;left:10px;right:10px;height:80%;overflow-x:auto;overflow-y:hidden;padding-left:50px;}
 .timeline .time-window .time-cont{position:absolute;height:100%;border-bottom:1px solid #333;}
 .timeline .time-window .time-cont .tick-marks{position:absolute;height:16%;width:100%;border:none;margin:0;padding:0;bottom:40px;opacity:.6;z-index:9000;}
 .timeline .time-window .time-cont .tick-marks .mark{border-right:1px solid #999;position:absolute}
@@ -29,6 +29,7 @@ i.plane{font-size:100px;margin:40px;color:rgba(0,64,128,0.3);position:fixed;left
 .timeline .time-window .time-cont .cursor-mark.user-mark .time-info{position:absolute;bottom:0;left:-20px;padding-left:4px;padding-right:4px;font-size:10px;color:#fff;background-color:#333;border:1px dotted #ccc}
 .timeline .time-window .time-cont .cursor-mark.active{background-color:#008000;}
 .timeline .time-window .time-cont .cursor-mark.active i{color:#008000}
+.timeline .time-window .time-cont .cursor-mark.active .time-info{position:absolute;bottom:0;left:-20px;padding-left:4px;padding-right:4px;font-size:10px;color:#fff;background-color:#008000;border:1px dotted #ccc}
 .timeline .time-window .time-cont .event{position:absolute;background-color:rgba(255,102,102,0.1);height:50%;bottom:0}
 .timeline .time-window .time-cont:hover .cursor-mark.user-mark{display:block}
 .timeline .timer-cont{position:absolute;bottom:0;left:0;}
