--- a/src/client/styl/index.styl
+++ b/src/client/styl/index.styl
@@ -44,6 +44,7 @@ i.plane
     height 80%
     overflow-x auto
     overflow-y hidden
+    padding-left 50px
 
 
     .time-cont
@@ -171,6 +172,17 @@ i.plane
 
         i
           color green
+
+        .time-info
+          position absolute
+          bottom 0px
+          left -20px
+          padding-left 4px
+          padding-right 4px
+          font-size 10px
+          color white
+          background-color green
+          border 1px dotted #ccc
 
 
       .event
