file upload to s3

--- a/src/client/styl/index.styl
+++ b/src/client/styl/index.styl
@@ -1,7 +1,13 @@
 body
   background-image url('/img/bg.png')
 
-
+// any user
 @import welcome
+
+
+// teacher
+@import files
+
+// testing
 @import timeline
 
