--- a/pub/css/index.css
+++ b/pub/css/index.css
@@ -1,7 +1,7 @@
 body {
   background-image: url("/img/bg.png");
 }
-.main {
+.login {
   position: fixed;
   top: 50%;
   left: 50%;
@@ -9,6 +9,10 @@ body {
   height: 200px;
   margin-left: -200px;
   margin-top: -100px;
+}
+.file-list {
+  position: fixed;
+  padding-top: 60px;
 }
 .timeline {
   -webkit-user-select: none;
