--- a/pub/css/index.css
+++ b/pub/css/index.css
@@ -10,6 +10,9 @@ body {
   margin-left: -200px;
   margin-top: -100px;
 }
+.top-bar img {
+  width: 24px;
+}
 .file-list {
   position: fixed;
   padding-top: 60px;
