--- a/src/client/styl/files.styl
+++ b/src/client/styl/files.styl
@@ -17,6 +17,16 @@
   .hdr
     margin-bottom 10px
 
+  .browser-item
+    height 200px
+    white-space nowrap
+
+
+  .item-info
+    position relative
+    left 3px
+    right 3px
+    overflow-x hidden
 
 
 
