--- a/pub/css/index.css
+++ b/pub/css/index.css
@@ -13,36 +13,86 @@ body {
 .top-bar img {
   width: 24px;
 }
+.files-main {
+  margin-top: 65px;
+}
+.file-list-item input {
+  border: 1px solid transparent;
+  background-color: transparent;
+}
+.file-list-item input:hover {
+  border: 1px dotted #333;
+}
 .browser-item {
   overflow: hidden;
 }
 .files-list {
   margin-top: 10px;
 }
-.files-main {
-  margin-top: 65px;
-}
-.files-main .btn-loose-group .btn {
+.files-list .btn-loose-group .btn {
   margin: 5px;
 }
-.files-main .logo {
+.files-list .logo {
   color: #999;
 }
-.files-main .hdr {
+.files-list .hdr {
   margin-bottom: 10px;
 }
-.files-main .browser-item {
+.files-list li:hover {
+  background-color: rgba(255,255,102,0.2);
+  box-shadow: 2px 2px 10px rgba(255,255,102,0.2);
+}
+.files-list .thumbnail {
+  cursor: pointer;
+  border: none;
+  -webkit-box-shadow: none;
+}
+.files-list .thumbnail .file-type-icon {
+  display: none;
+}
+.files-list .thumbnail img {
+  height: 75%;
+}
+.files-list .thumbnail:hover img,
+.files-list .thumbnail:hover .caption {
+  background-color: transparent;
+}
+.files-list .thumbnail.video img,
+.files-list .thumbnail.image img {
+  box-shadow: 1px 1px 3px #333;
+}
+.files-list .thumbnail.video .file-type-icon,
+.files-list .thumbnail.image .file-type-icon {
+  display: block;
+  position: relative;
+  top: -30px;
+  left: 10px;
+  padding: 4px;
+  border-radius: 4px;
+  background-color: rgba(0,0,0,0.4);
+  color: #eee;
+}
+.files-list .browser-item {
   height: 200px;
   white-space: nowrap;
 }
-.files-main .item-info {
+.files-list .browser-item input.title {
+  border: 1px solid transparent;
+  background-color: transparent;
+  text-align: center;
+}
+.files-list .browser-item input.title:hover {
+  border: 1px dotted #333;
+}
+.files-list .browser-item .item-info {
   position: relative;
   left: 3px;
   right: 3px;
   overflow-x: hidden;
+  text-align: center;
 }
-.files-main .navbar,
-.files-main .navbar-inner {
+.files-list .navbar,
+.files-list .navbar-inner {
   background-color: transparent;
   background-image: url("img/bg.png");
 }
