--- a/src/client/styl/files.styl
+++ b/src/client/styl/files.styl
@@ -1,12 +1,26 @@
 
+.files-main
+  margin-top 65px
+
+
+.file-list-item
+  
+  input
+    border: 1px solid transparent
+    background-color transparent
+
+  input:hover
+    border 1px dotted #333
+
+
 .browser-item
   overflow hidden
 
 .files-list
   margin-top 10px
 
-.files-main
-  margin-top 65px
+
+
 
   .btn-loose-group .btn
     margin 5px
@@ -17,17 +31,66 @@
   .hdr
     margin-bottom 10px
 
+  li:hover
+    background-color rgba(255,255,102,0.2)
+    box-shadow 2px 2px 10px rgba(255,255,102,0.2)
+  
+  .thumbnail
+    cursor pointer
+
+    border none
+    -webkit-box-shadow none
+
+    .file-type-icon
+      display none
+
+    img
+      height 75%
+
+    
+    
+  .thumbnail:hover
+    
+    img
+      
+    
+    .caption
+      background-color transparent
+
+  .thumbnail.video, .thumbnail.image
+    img
+      box-shadow 1px 1px 3px #333
+
+    .file-type-icon 
+      display block
+      position relative
+      top -30px
+      left 10px
+      padding 4px
+      border-radius 4px
+      background-color rgba(0,0,0,0.4)
+      color #eee
+
+
+
   .browser-item
     height 200px
     white-space nowrap
 
+    input.title
+      border 1px solid transparent
+      background-color transparent
+      text-align center
 
-  .item-info
-    position relative
-    left 3px
-    right 3px
-    overflow-x hidden
+    input.title:hover
+      border 1px dotted #333
 
+    .item-info
+      position relative
+      left 3px
+      right 3px
+      overflow-x hidden
+      text-align center
 
 
   .navbar, .navbar-inner
