--- a/src/client/styl/files.styl
+++ b/src/client/styl/files.styl
@@ -1,6 +1,21 @@
 
+.files-top-bar.sticky
+  position fixed
+  top 46px
+  background-color #eee
+  background-image url('/img/bg.png')
+  z-index 9000
+  box-shadow 0px 1px 2px #333
+  border-radius 4px 
+
 .files-main
   margin-top 65px
+
+  .btn
+    cursor pointer
+
+  .btns-add .btn
+    margin-left 4px
 
 
 .file-list-item
